--- a/package.json
+++ b/package.json
@@ -95,10 +95,11 @@
     "eslint": "^9",
     "eslint-config-next": "^16.1.1",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   },
   "prisma": {
-    "seed": "bun run prisma/seed.ts"
+    "seed": "ts-node --transpile-only prisma/seed.ts"
   }
 }
