--- a/package.json
+++ b/package.json
@@ -67,14 +67,15 @@
     "next-themes": "^0.4.6",
     "prisma": "^6.11.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-day-picker": "^9.8.0",
+    "react-dom": "18.2.0",
     "react-google-recaptcha-v3": "^1.11.0",
     "react-hook-form": "^7.60.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.3",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.4",
+    "resend": "^6.9.2",
     "sharp": "^0.34.3",
     "socket.io-client": "^4.8.3",
     "sonner": "^2.0.6",
