--- a/package.json
+++ b/package.json
@@ -85,7 +85,9 @@
     "vaul": "^1.1.2",
     "z-ai-web-dev-sdk": "^0.0.16",
     "zod": "^4.0.2",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "bullmq": "^5.34.4",
+    "ioredis": "^5.3.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
