update-build-config

--- a/package.json
+++ b/package.json
@@ -103,5 +103,8 @@
   },
   "prisma": {
     "seed": "ts-node --transpile-only prisma/seed.ts"
+  },
+  "engines": {
+    "node": ">=18.18.0"
   }
 }
